--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Rocket Shoes - Sua loja preferida!</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
           <input type="search" value="" placeholder="Pesquisar" />
         </div>
         <div class="bag">
-          <img src="./assets/icon-bag.svg" alt="sacola" />
+          <a href=""><img src="./assets/icon-bag.svg" alt="sacola" /></a>
         </div>
       </nav>
     </header>
@@ -53,11 +53,23 @@
           <div class="big-picture">
             <img src="./assets/tenis-1-ampliado.png" alt="par de tênis" />
           </div>
-          <div class="mini-gallery">
-            <div><img src="./assets/tenis-1-galeria.png" alt="tenis" /></div>
-            <div><img src="./assets/tenis-2-galeria.png" alt="tenis" /></div>
-            <div><img src="./assets/tenis-3-galeria.png" alt="tenis" /></div>
-          </div>
+          <ul class="gallery-slider">
+            <li>
+              <a href="#"
+                ><img src="./assets/tenis-1-galeria.png" alt="tenis"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./assets/tenis-2-galeria.png" alt="tenis"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./assets/tenis-3-galeria.png" alt="tenis"
+              /></a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -71,8 +83,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
-        ></iframe
-        >"
+        ></iframe>
       </div>
       <div class="social">
         <ul>
